<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_text2voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_text2_activity" />

    <TextView
        android:id="@+id/tts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_text2voice"
        android:text="@string/Text_text2voice" />

    <Button
        android:id="@+id/phone_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="112dp"
        android:text="@string/start_play" />

    <Button
        android:id="@+id/wear_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/start_text2voice" />

    <Button
        android:id="@+id/next_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/phone_play"
        android:layout_alignParentEnd="true"
        android:text="@string/next_play" />

</RelativeLayout>